Fix HTML structure and update links

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 	</div>
 	<header>
 		<div class="container">
-		<h1><a href="utama.html"></a>KELOMPOK BUNGA LILY</h1>
+		<h1><a href="index.html"></a>KELOMPOK BUNGA LILY</h1>
 		<ul>
-			<li class="active"><a href="utama.html">HOME</a></li>
+			<li class="active"><a href="index.html">HOME</a></li>
             <li><a href="deskripsi.html">BIODATA</a></li>
 			
 		</ul>
@@ -52,3 +52,4 @@
 </body>
 
 </html>
+
