Fix HTML structure and update content

--- a/deskripsi.html
+++ b/deskripsi.html
@@ -18,9 +18,9 @@
 	</div>
    <header>
 		<div class="container">
-		<h1><a href="utama.html"></a>BIODATA ANGGOTA KELOMPOK</h1>
+		<h1><a href="index.html"></a>BIODATA ANGGOTA KELOMPOK</h1>
 		<ul>
-			<li><a href="utama.html">HOME</a></li>
+			<li><a href="index.html">HOME</a></li>
             <li class="active"><a href="deskripsi.html">BIODATA</a></li>
 		</ul>
 		</div>
@@ -128,4 +128,5 @@
 </section>
 
   </body>
+
 </html>
